# morepork

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  deploy.yml  traces.yml
adapters/: genpalette.py
adapters/bgb/: .gitignore  Makefile  README.md  morepork-bgb.c
adapters/docboy/: Makefile  docboy-trace-api.patch  gbtrace-docboy.cpp  morepork-docboy.cpp
adapters/gambatte/: Makefile  README.md  gbtrace-gambatte.cpp  morepork-gambatte.cpp
adapters/gateboy/: .gitignore  Makefile  gbtrace-gateboy.cpp  morepork-gateboy.cpp
adapters/gopher2600/: .gitignore  Makefile  README.md  main.go  ntsc_palette.go
adapters/mame/: .gitignore  Makefile  README.md  calib_colors.asm  gen_mame_palette.py  go.mod  main.go  mame_palette.go  ntsc_palette.go
adapters/mgba/: Makefile  README.md  gbtrace-mgba.c  morepork-mgba.c
adapters/missingno/: .gitignore  Cargo.toml  Makefile
adapters/missingno/src/: main.rs
adapters/sameboy/: Makefile  README.md  gbtrace-sameboy.cpp  morepork-sameboy.cpp  sameboy-tcycle.patch
adapters/stella/: .gitignore  Makefile  README.md  gbtrace-stella.cxx  morepork-stella.cxx  ntsc_palette.h  stella-trace-api.patch
crates/gbtrace-ffi/: gbtrace.h
crates/gbtrace-ffi/src/: lib.rs
crates/gbtrace-wasm/src/: lib.rs
crates/gbtrace/src/: comparison.rs  framebuffer.rs  header.rs  lib.rs  main.rs  profile.rs  query.rs  reader.rs  store.rs
crates/gbtrace/tests/: format_roundtrip.rs  integration.rs
crates/morepork/: Cargo.toml
crates/morepork-ffi/: Cargo.toml  morepork.h
crates/morepork-ffi/src/: lib.rs
crates/morepork-wasm/: Cargo.toml
crates/morepork-wasm/src/: lib.rs
crates/morepork/examples/: verify_trace.rs
crates/morepork/src/: comparison.rs  disasm.rs  downsample.rs  entry.rs  error.rs  header.rs  lib.rs  main.rs  profile.rs  query.rs  reader.rs  snapshot.rs  store.rs
crates/morepork/src/family/: mos6502.rs
crates/morepork/src/family/gb/: catalogue.rs
crates/morepork/src/family/nes/: disasm.rs  mod.rs
crates/morepork/src/family/vcs/: disasm.rs  mod.rs
crates/morepork/src/format/: convert.rs  mod.rs  read.rs  write.rs
crates/morepork/src/system/: mod.rs  mos6502.rs
crates/morepork/src/system/gb/: catalogue.rs  framebuffer.rs  mod.rs  snapshot.rs  vram.rs
crates/morepork/src/system/nes/: disasm.rs  mod.rs
crates/morepork/src/system/vcs/: disasm.rs  mod.rs
crates/morepork/tests/: format_roundtrip.rs  integration.rs  state_roundtrip.rs
docs/: multi-system.md
scripts/: check-gambatte-hex.py  gen-rules.py  manifest.py  png-to-pix.py  ref-lib.sh  trace-age.sh  trace-blargg.sh  trace-dmg-sound.sh  trace-gambatte-tests.sh  trace-gbmicrotest.sh  trace-mealybug-tearoom.sh  trace-mooneye-wilbertpol.sh  trace-mooneye.sh  trace-samesuite.sh  trace-screenshot-suite.sh  trace-screenshot.sh
test-suites/cgb-acid-hell/: profile.toml
test-suites/cgb-acid2/: profile.toml
test-suites/rtc3test/: profile.toml
web/: index.html
web/src/components/: app-shell.js  file-loader.js  pixel-display.js  ppu-fifo-visualizer.js  test-picker.js  trace-diff-table.js  (+4 more)
(+16 files in other folders)
