[package]
name = "gbtrace-missingno"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gbtrace-missingno"
path = "src/main.rs"

[dependencies]
# Track the latest missingno (no rev pin) — CI resolves it fresh on each build.
missingno-gb = { git = "https://github.com/ajoneil/missingno", features = ["gbtrace"] }
missingno-gbc = { git = "https://github.com/ajoneil/missingno", features = ["gbtrace"] }
clap = { version = "4", features = ["derive"] }
