[package]
name = "morepork"
version = "0.1.0"
edition = "2021"
description = "Reader, writer, and profile parser for the GB Trace emulator comparison format"

[[bin]]
name = "morepork"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "png"]
png = ["dep:png"]

[dependencies]
missingno-core = { git = "https://github.com/ajoneil/missingno", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
sha2 = "0.10"
thiserror = "2"
arrow = { version = "54", default-features = false, features = ["ipc"] }
zstd = "0.13"
png = { version = "0.17", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
missingno-6502 = { git = "https://github.com/ajoneil/missingno", branch = "main" }
